Update temperature conversion formulas and improve CSS styles for better layout

--- a/index.html
+++ b/index.html
@@ -58,35 +58,35 @@
         <h2>Explanation</h2>
         <p>To convert between different temperature scales, you can use the following formulas:</p>
         <details>
-          <summary><strong>Celcius (&deg;C)</strong></summary>
+          <summary><strong>Celsius (&deg;C)</strong></summary>
           <ul>
-            <li>Celcius to Fahrenheit: <code>F = C x 9/5 + 32</code></li>
-            <li>Celcius to Kelvin: <code>K = C + 273.15</code></li>
-            <li>Celcius to Reamur: <code>Ré = C x 4/5</code></li>
+            <li>Celsius to Fahrenheit: <code>F = C &times; &#x2154; + 32</code></li>
+            <li>Celsius to Kelvin: <code>K = C + 273.15</code></li>
+            <li>Celsius to Reaumur: <code>R&eacute; = C &times; &#x2155;</code></li>
           </ul>
         </details>
         <details>
           <summary><strong>Fahrenheit (&deg;F)</strong></summary>
           <ul>
-            <li>Fahrenheit to Celcius: <code>C = (F - 32) x 5/9</code></li>
-            <li>Fahrenheit to Kelvin: <code>K = (F - 32) x 5/9 + 273.15</code></li>
-            <li>Fahrenheit to Reamur: <code>Ré = (F - 32) x 4/9</code></li>
+            <li>Fahrenheit to Celsius: <code>C = (F &minus; 32) &times; &#x2155;</code></li>
+            <li>Fahrenheit to Kelvin: <code>K = (F &minus; 32) &times; &#x2155; + 273.15</code></li>
+            <li>Fahrenheit to Reaumur: <code>R&eacute; = (F &minus; 32) &times; &#x2159;</code></li>
           </ul>
         </details>
         <details>
           <summary><strong>Kelvin (&deg;K)</strong></summary>
           <ul>
-            <li>Kelvin to Celcius: <code>C = K - 273.15</code></li>
-            <li>Kelvin to Fahrenheit: <code>F = (K - 273.15) x 9/5 + 32</code></li>
-            <li>Kelvin to Reamur: <code>Ré = (K - 273.15) x 4/5</code></li>
+            <li>Kelvin to Celsius: <code>C = K &minus; 273.15</code></li>
+            <li>Kelvin to Fahrenheit: <code>F = (K &minus; 273.15) &times; &#x2154; + 32</code></li>
+            <li>Kelvin to Reaumur: <code>R&eacute; = (K &minus; 273.15) &times; &#x2155;</code></li>
           </ul>
         </details>
         <details>
-          <summary><strong>Reamur (&deg;Ré)</strong></summary>
+          <summary><strong>Reaumur (&deg;R&eacute;)</strong></summary>
           <ul>
-            <li>Reamur to Celcius: <code>C = Ré x 5/4</code></li>
-            <li>Reamur to Fahrenheit: <code>F = Ré x 9/4 + 32</code></li>
-            <li>Reamur to Kelvin: <code>K = Ré x 5/4 + 273.15</code></li>
+            <li>Reaumur to Celsius: <code>C = R&eacute; &times; &#x2155;</code></li>
+            <li>Reaumur to Fahrenheit: <code>F = R&eacute; &times; &#x2159; + 32</code></li>
+            <li>Reaumur to Kelvin: <code>K = R&eacute; &times; &#x2155; + 273.15</code></li>
           </ul>
         </details>
         <p id="note">Note: The formulas above are based on the definitions of the temperature scales.</p>
