--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <link rel="icon" href="../assets/themometer-icon-website.png" type="image/png">
 </head>
 <body>
-    <audio autoplay loop id="background-music">
+    <audio loop id="background-music">
       <source src="../assets/backsound-lofi.mp3" type="audio/mpeg">
       <source src="../assets/backsound-lofi.ogg" type="audio/ogg">
       Your browser does not support the audio element.
     </audio>
-  <button id="mute-btn" aria-label="Mute/Unmute">
-    <img id="mute-icon" src="../assets/audio-on-light.png" alt="Mute/Unmute" width="32" height="32">
-  </button>
+    <button id="playpause-btn" aria-label="Play/Pause Music">
+      <img id="playpause-icon" src="../assets/play.png" alt="Play/Pause">
+    </button>
   <div class="background"></div>
   <div class="blur-layer"></div>
   <div class="main-content">
