--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Temperature Converter</title>
     <link rel="stylesheet" href="css/styles.css">
-    <script src="js/script.js" defer></script>
     <link rel="icon" href="../assets/themometer-icon-website.png" type="image/png">
 </head>
 <body>
@@ -107,5 +106,6 @@
       <p>Made by Danzzilo</p>
     </div>
   </div>
+  <script src="js/script.js"></script>
 </body>
 </html>
