Fix audio source paths in index.html

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <audio loop id="background-music">
-      <source src="../assets/backsound-lofi.mp3" type="audio/mpeg">
-      <source src="../assets/backsound-lofi.ogg" type="audio/ogg">
+      <source src="assets/backsound-lofi.mp3" type="audio/mpeg">
+      <source src="assets/backsound-lofi.ogg" type="audio/ogg">
       Your browser does not support the audio element.
     </audio>
     <button id="playpause-btn" aria-label="Play/Pause Music">
