--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             </div>
         </form>
         <hr>
-        <h2>Explanation</h2>
+        <h2><strong>Explanation</strong></h2>
         <p>To convert between different temperature scales, you can use the following formulas:</p>
         <details>
           <summary><strong>Celsius (&deg;C)</strong></summary>
