--- a/index.html
+++ b/index.html
@@ -8,26 +8,27 @@
     <link rel="icon" href="../assets/themometer-icon-website.png" type="image/png">
 </head>
 <body>
-    <!-- Background music -->
-    <audio loop id="background-music">
-      <source src="assets/backsound-lofi.mp3" type="audio/mpeg">
-      <source src="assets/backsound-lofi.ogg" type="audio/ogg">
-      Your browser does not support the audio element.
-    </audio>
-    <button id="playpause-btn" aria-label="Play/Pause Music">
-      <img id="playpause-icon" src="../assets/play.png" alt="Play/Pause">
-    </button>
+  <!-- Background music -->
+  <audio loop id="background-music">
+    <source src="assets/backsound-lofi.mp3" type="audio/mpeg">
+    <source src="assets/backsound-lofi.ogg" type="audio/ogg">
+    Your browser does not support the audio element.
+  </audio>
+  <button id="playpause-btn" aria-label="Play/Pause Music">
+    <img id="playpause-icon" src="../assets/play.png" alt="Play/Pause">
+  </button>
 
+  <!-- Background and blur layer -->
   <div class="background"></div>
   <div class="blur-layer"></div>
-  <div class="main-content">
 
-    <!-- Dark/light mode button -->
+  <!-- Dark/light mode button -->
   <button id="theme-toggle" aria-label="Toggle Dark/Light Theme">
     <img id="theme-icon" src="../assets/moon-light.png" alt="Toggle Theme" width="32" height="32">
   </button>
 
   <!-- Content -->
+  <div class="main-content"></div>
     <header>
         <h1>Temperature Converter</h1>
     </header>
